<resources>
    <string name="app_name">MyInstagramClone</string>
    <string name="todo">TODO</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="enter_username">Enter username…</string>
    <string name="enter_email">Enter email…</string>
    <string name="enter_password">Enter password…</string>
    <string name="social_media_app">Social Media App</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="tell_us_about_your_self">Tell us about yourself?</string>
    <string name="what_is_your_profession">What is your profession?</string>
    <string name="what_are_your_hobbies">What are your hobbies?</string>
    <string name="what_is_your_favorite_sport">What is your favorite sport?</string>
    <string name="update_info">Update Info</string>
    <string name="loading_users_please_wait">Loading users, please wait…</string>
    <string name="please_enter_a_description">Please enter a description for you image…</string>
    <string name="share_image">Share Image</string>
    <string name="post_image">Post Image</string>
    <string name="logout">Logout</string>

</resources>